--- a/fri/Cargo.toml
+++ b/fri/Cargo.toml
@@ -16,6 +16,11 @@ p3-util = { path = "../util" }
 itertools = "0.12.0"
 tracing = "0.1.37"
 serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
+icicle-cuda-runtime = { path = "../../icicle/wrappers/rust/icicle-cuda-runtime" }
+icicle-babybear = { path = "../../icicle/wrappers/rust/icicle-fields/icicle-babybear" }
+icicle-core = { path = "../../icicle/wrappers/rust/icicle-core" }
+p3-baby-bear = { path = "../baby-bear" }
+
 
 [dev-dependencies]
 p3-baby-bear = { path = "../baby-bear" }
