--- a/fri/Cargo.toml
+++ b/fri/Cargo.toml
@@ -13,14 +13,13 @@ p3-interpolation = { path = "../interpolation" }
 p3-matrix = { path = "../matrix" }
 p3-maybe-rayon = { path = "../maybe-rayon" }
 p3-util = { path = "../util" }
+p3-baby-bear = { path = "../baby-bear" }
 itertools = "0.12.0"
 tracing = "0.1.37"
 serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
-icicle-cuda-runtime = { path = "../../icicle/wrappers/rust/icicle-cuda-runtime" }
-icicle-babybear = { path = "../../icicle/wrappers/rust/icicle-fields/icicle-babybear" }
-icicle-core = { path = "../../icicle/wrappers/rust/icicle-core" }
-p3-baby-bear = { path = "../baby-bear" }
-
+icicle-core = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v2.3.0" }
+icicle-cuda-runtime = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v2.3.0" }
+icicle-babybear = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v2.3.0" }
 
 [dev-dependencies]
 p3-baby-bear = { path = "../baby-bear" }
